fdo#50087 fix RTF import of Title, Subject, Comments document properties

Change-Id: I3358fad4949c2c21ecf63983a36b7c8428df9f06